Sophont Log Complete
Finished version of the Sophont Log

--- a/Free Spacer/FreeSpacer.css
+++ b/Free Spacer/FreeSpacer.css
@@ -334,11 +334,12 @@ textarea
 	height: 285px;
 	display: grid;
 	grid-row-gap: 0px;
-	grid-template-columns: 40px 80px 2fr 90px 2fr 1fr 12px;
-	grid-template-rows: 24px repeat(13,20px) 1fr;
+	grid-template-columns: 40px 80px 5fr 80px 3fr 3fr 14px;
+	grid-template-rows: 24px repeat(14,18px) 1fr;
 	justify-items: start;
 	align-items: start;
 	padding: 6px;
+	grid-column-gap: 4px;
 }
 
 /* ******************************* */
@@ -2125,7 +2126,7 @@ input[type="checkbox"].sheet-smallCheckbox,
 input[type="radio"].sheet-smallCheckbox
 {
 	width: 13px;
-	height: 13px;
+	height: 100%;
 	margin: 0;
 	padding: 0;
 	font-size: 13px;
@@ -2136,7 +2137,7 @@ input[type="checkbox"].sheet-largeCheckbox,
 input[type="radio"].sheet-largeCheckbox
 {
 	width: 25px;
-	height: 25px;
+	height: 100%;
 	margin: 0;
 	padding: 0;
 	font-size: 25px;
@@ -2147,14 +2148,12 @@ input[type="checkbox"].sheet-mediumCheckbox,
 input[type="radio"].sheet-mediumCheckbox
 {
 	width: 18px;
-	height: 18px;
+	height: 100%;
 	margin: 0;
 	padding: 0;
 	font-size: 18px;
 	vertical-align: middle;
 }
-
-
 
 /*  Image Location  */
 span.sheet-largePips
@@ -5049,6 +5048,19 @@ input[type="number"].sheet-resourceBox
 	justify-self: center;
 }
 
+textarea.sheet-sophontTagBox
+{
+	margin-top:3px;
+	height: 40px;
+}
+
+textarea.sheet-sophontAugmentBox
+{
+	margin-top: 3px;
+	height: 80px;
+}
+
+
 .sheet-aliasThreat
 {
 	grid-column-start: 1;
@@ -5080,7 +5092,7 @@ input[type="number"].sheet-resourceBox
 .sheet-pronounThreatName
 {
 	grid-column-start: 5;
-	grid-column-end: 8;
+	grid-column-end: 7;
 	grid-row-start: 1;
 	grid-row-end: 2;
 }
@@ -5117,6 +5129,24 @@ input[type="number"].sheet-resourceBox
 	grid-column-end: 6;
 }
 
+.sheet-sophontNotes
+{
+	grid-row-start: 15;
+	grid-row-end: 16;
+}
+
+.sheet-sophontTagList
+{
+	grid-row-start: 12;
+	grid-row-end: 15;
+}
+
+.sheet-sophontAugmentList
+{
+	grid-row-start: 10;
+	grid-row-end: 15;
+}
+
 /* Sophont Conditions*/
 .sheet-sophontConditionWidget
 {
@@ -5124,15 +5154,15 @@ input[type="number"].sheet-resourceBox
 	grid-column-end: 7;
 	grid-row-start: 2;
 	grid-row-end: 14;
-	width: 175px;
+	width: 170px;
 	height: 250px;
 	display: grid;
 	grid-column-gap: 2px;
 	grid-template-columns: 18px 1fr 25px;
-	grid-template-rows: repeat(10,25px) 1fr;
+	grid-template-rows: 20px repeat(9,25px) 1fr;
 	justify-items: start;
 	align-items: start;
-	padding: 0px;
+	margin: 4px;
 	justify-self: end;
 }
 
@@ -5153,19 +5183,73 @@ input[type="number"].sheet-resourceBox
 {
 	grid-column-start: 1;
 	grid-column-end: 2;
+	justify-self:baseline;
 }
 
 .sheet-sophontConditionText
 {
 	grid-column-start: 2;
 	grid-column-end: 3;
-	justify-self: center;
+	justify-self: baseline;
 }
 
 .sheet-sophontConditionArmour
 {
 	grid-column-start: 3;
 	grid-column-end: 4;
-	justify-self: center;
-	align-self: center;
+	justify-self: baseline;
+}
+
+.sheet-sophontCondition1
+{
+	grid-row-start: 2;
+	grid-row-end: 3;
+}
+
+.sheet-sophontCondition2
+{
+	grid-row-start: 3;
+	grid-row-end: 4;
+}
+
+.sheet-sophontCondition3
+{
+	grid-row-start: 4;
+	grid-row-end: 5;
+}
+
+.sheet-sophontCondition4
+{
+	grid-row-start: 5;
+	grid-row-end: 6;
+}
+
+.sheet-sophontCondition5
+{
+	grid-row-start: 6;
+	grid-row-end: 7;
+}
+
+.sheet-sophontCondition6
+{
+	grid-row-start: 7;
+	grid-row-end: 8;
+}
+
+.sheet-sophontCondition7
+{
+	grid-row-start: 8;
+	grid-row-end: 9;
+}
+
+.sheet-sophontCondition8
+{
+	grid-row-start: 9;
+	grid-row-end: 10;
+}
+
+.sheet-sophontCondition9
+{
+	grid-row-start: 10;
+	grid-row-end: 11;
 }
