Setup Composite Sophont Log
Uploaded compositeSophontLog image
Setup HTML for the Composite Sophont Log
Setup CSS for the Composite Sophont Log

--- a/Free Spacer/FreeSpacer.css
+++ b/Free Spacer/FreeSpacer.css
@@ -33,7 +33,8 @@ input[type="radio"]
 
 input.sheet-crewmemberSelector:checked ~ div.sheet-crewmemberSheet,
 input.sheet-shipSelector:checked ~ div.sheet-shipSheet,
-input.sheet-sophontSelector:checked ~ div.sheet-sophontSheet
+input.sheet-sophontSelector:checked ~ div.sheet-sophontSheet,
+input.sheet-compositeSophontSelector:checked ~ div.sheet-compositeSophontSheet
 {
 	display: block;
 }
@@ -341,6 +342,24 @@ textarea
 	padding: 6px;
 	grid-column-gap: 4px;
 }
+
+.sheet-compositeSophontSheetGrid
+{
+	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/NPC/Free%20Spacer/images/compositeSophontLog.png);
+	background-size: 900px 290px;
+	background-repeat: no-repeat;
+	width: 887px;
+	height: 285px;
+	display: grid;
+	grid-row-gap: 0px;
+	grid-template-columns: 40px 80px 5fr 80px 3fr 3fr 14px;
+	grid-template-rows: 24px repeat(14,18px) 1fr;
+	justify-items: start;
+	align-items: start;
+	padding: 6px;
+	grid-column-gap: 4px;
+}
+
 
 /* ******************************* */
 /*			Aspects		           */
@@ -881,7 +900,7 @@ textarea
 	display: grid;
 	grid-template-columns: 25px;
 	grid-template-rows: repeat(4,25px);
-	grid-template-areas: "resiliance2" "resiliance1" "integrity" "vitality";
+	grid-template-areas: "resilience2" "resilience1" "integrity" "vitality";
 	position: relative;
 	justify-self: end;
 }
@@ -894,14 +913,14 @@ textarea
 		position: absolute;
 	}
 
-	.sheet-crewConditions > .sheet-resiliance-slot-2
+	.sheet-crewConditions > .sheet-resilience-slot-2
 	{
-		grid-area: resiliance2;
+		grid-area: resilience2;
 	}
 
-	.sheet-crewConditions > .sheet-resiliance-slot-1
+	.sheet-crewConditions > .sheet-resilience-slot-1
 	{
-		grid-area: resiliance1;
+		grid-area: resilience1;
 	}
 
 	.sheet-crewConditions > .sheet-integrity
@@ -1911,7 +1930,7 @@ input[type="radio"].sheet-hideCheckbox
 	display: grid;
 	grid-template-columns: 25px;
 	grid-template-rows: repeat(4,25px);
-	grid-template-areas: "resiliance2" "resiliance1" "integrity" "vitality";
+	grid-template-areas: "resilience2" "resilience1" "integrity" "vitality";
 	position: relative;
 	justify-self: end;
 	margin-top: 10px;
@@ -1925,14 +1944,14 @@ input[type="radio"].sheet-hideCheckbox
 		position: absolute;
 	}
 
-	.sheet-launch-bay-tug-conditions > .sheet-resiliance-slot-2
+	.sheet-launch-bay-tug-conditions > .sheet-resilience-slot-2
 	{
-		grid-area: resiliance2;
+		grid-area: resilience2;
 	}
 
-	.sheet-launch-bay-tug-conditions > .sheet-resiliance-slot-1
+	.sheet-launch-bay-tug-conditions > .sheet-resilience-slot-1
 	{
-		grid-area: resiliance1;
+		grid-area: resilience1;
 	}
 
 	.sheet-launch-bay-tug-conditions > .sheet-integrity
@@ -1955,7 +1974,7 @@ input[type="radio"].sheet-hideCheckbox
 	display: grid;
 	grid-template-columns: 25px;
 	grid-template-rows: repeat(3,25px);
-	grid-template-areas: "resiliance" "integrity" "vitality";
+	grid-template-areas: "resilience" "integrity" "vitality";
 	position: relative;
 	justify-self: end;
 	margin-top: 4px;
@@ -1969,9 +1988,9 @@ input[type="radio"].sheet-hideCheckbox
 		position: absolute;
 	}
 
-	.sheet-launch-bay-trailer-conditions > .sheet-resiliance-slot
+	.sheet-launch-bay-trailer-conditions > .sheet-resilience-slot
 	{
-		grid-area: resiliance;
+		grid-area: resilience;
 	}
 
 	.sheet-launch-bay-trailer-conditions > .sheet-integrity
@@ -2304,7 +2323,7 @@ input[type="checkbox"]:checked + span.sheet-armour
 	z-index: 2;
 }
 
-input[type="checkbox"] + span.sheet-resiliance
+input[type="checkbox"] + span.sheet-resilience
 {
 	background-image: url(https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Free%20Spacer/images/resiliance.png);
 	background-repeat: no-repeat;
@@ -2313,9 +2332,27 @@ input[type="checkbox"] + span.sheet-resiliance
 	z-index: 2;
 }
 
-input[type="checkbox"]:checked + span.sheet-resiliance
+input[type="checkbox"]:checked + span.sheet-resilience
 {
 	background-image: url(https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Free%20Spacer/images/resiliance2.png);
+	background-repeat: no-repeat;
+	background-position: center;
+	opacity: 1;
+	z-index: 2;
+}
+
+input[type="checkbox"] + span.sheet-resilienceThreat
+{
+	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/NPC/Free%20Spacer/images/resilianceThreat.png);
+	background-repeat: no-repeat;
+	background-position: center;
+	opacity: 1;
+	z-index: 2;
+}
+
+input[type="checkbox"]:checked + span.sheet-resilienceThreat
+{
+	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/NPC/Free%20Spacer/images/resilianceThreatFilled.png);
 	background-repeat: no-repeat;
 	background-position: center;
 	opacity: 1;
@@ -2334,6 +2371,24 @@ input[type="checkbox"] + span.sheet-integrity
 input[type="checkbox"]:checked + span.sheet-integrity
 {
 	background-image: url(https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Free%20Spacer/images/sys-int2.png);
+	background-repeat: no-repeat;
+	background-position: center;
+	opacity: 1;
+	z-index: 2;
+}
+
+input[type="checkbox"] + span.sheet-integrityThreat
+{
+	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/NPC/Free%20Spacer/images/IntegrityThreat.png);
+	background-repeat: no-repeat;
+	background-position: center;
+	opacity: 1;
+	z-index: 2;
+}
+
+input[type="checkbox"]:checked + span.sheet-integrityThreat
+{
+	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/NPC/Free%20Spacer/images/IntegrityThreatFilled.png);
 	background-repeat: no-repeat;
 	background-position: center;
 	opacity: 1;
@@ -4090,7 +4145,7 @@ input[type=number].sheet-txtfield
 	}
 
 	/* ship section resilience */
-	.sheet-ship-block .sheet-border-resiliance
+	.sheet-ship-block .sheet-border-resilience
 	{
 		grid-column: 4 / 4;
 		grid-row: 12 / 14;
@@ -4099,13 +4154,13 @@ input[type=number].sheet-txtfield
 		border: 2px solid black;
 	}
 
-	.sheet-ship-block .sheet-resiliance1
+	.sheet-ship-block .sheet-resilience1
 	{
 		grid-column: 4 / 5;
 		grid-row: 12 / 13;
 	}
 
-	.sheet-ship-block .sheet-resiliance21
+	.sheet-ship-block .sheet-resilience21
 	{
 		grid-column: 4 / 5;
 		grid-row: 13 / 14;
@@ -4272,7 +4327,7 @@ input[type=number].sheet-txtfield
 }
 
 
-.sheet-ship-block div.sheet-ship-resiliance
+.sheet-ship-block div.sheet-ship-resilience
 {
 	display: flex;
 	justify-content: center;
@@ -4366,7 +4421,7 @@ input[type=number].sheet-txtfield
 
 /* Armor & Conditions toggles */
 .sheet-ship-block .sheet-ship-armor input[type="checkbox"],
-.sheet-ship-block .sheet-ship-resiliance input[type="checkbox"],
+.sheet-ship-block .sheet-ship-resilience input[type="checkbox"],
 .sheet-ship-block .sheet-ship-sys-integrity input[type="checkbox"],
 .sheet-ship-block .sheet-ship-vital input[type="checkbox"]
 {
@@ -4379,7 +4434,7 @@ input[type=number].sheet-txtfield
 	left: 13px;
 }
 
-.sheet-ship-block .sheet-ship-resiliance input[type="checkbox"]
+.sheet-ship-block .sheet-ship-resilience input[type="checkbox"]
 {
 	left: 3px;
 }
@@ -4414,7 +4469,7 @@ input[type=number].sheet-txtfield
 	flex-shrink: 0;
 }
 
-.sheet-ship-block .sheet-ship-resiliance input[type="checkbox"] + span.sheet-res-x
+.sheet-ship-block .sheet-ship-resilience input[type="checkbox"] + span.sheet-res-x
 {
 	background-image: url(https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Free%20Spacer/images/resiliance2.png);
 	background-size: 24px 24px;
@@ -4454,7 +4509,7 @@ input[type=number].sheet-txtfield
 }
 
 .sheet-ship-block .sheet-ship-armor input[type="checkbox"]:checked + span.sheet-armor-x,
-.sheet-ship-block .sheet-ship-resiliance input[type="checkbox"]:checked + span.sheet-res-x,
+.sheet-ship-block .sheet-ship-resilience input[type="checkbox"]:checked + span.sheet-res-x,
 .sheet-ship-block .sheet-ship-sys-integrity input[type="checkbox"]:checked + span.sheet-integ-x,
 .sheet-ship-block .sheet-ship-vital input[type="checkbox"]:checked + span.sheet-vital-x
 {
