Finished Composite Sophont Log

--- a/Free Spacer/FreeSpacer.css
+++ b/Free Spacer/FreeSpacer.css
@@ -348,11 +348,11 @@ textarea
 	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/NPC/Free%20Spacer/images/compositeSophontLog.png);
 	background-size: 900px 290px;
 	background-repeat: no-repeat;
-	width: 887px;
+	width: 900px;
 	height: 285px;
 	display: grid;
 	grid-row-gap: 0px;
-	grid-template-columns: 40px 80px 5fr 80px 3fr 3fr 14px;
+	grid-template-columns: 40px 78px 4fr 80px 3fr 150px 25px 25px 25px 25px 5px;
 	grid-template-rows: 24px repeat(14,18px) 1fr;
 	justify-items: start;
 	align-items: start;
@@ -5105,14 +5105,16 @@ input[type="number"].sheet-resourceBox
 
 textarea.sheet-sophontTagBox
 {
-	margin-top:3px;
+	margin-top: 3px;
 	height: 40px;
+	width: 95%;
 }
 
 textarea.sheet-sophontAugmentBox
 {
 	margin-top: 3px;
 	height: 80px;
+	width: 95%;
 }
 
 
@@ -5217,8 +5219,63 @@ textarea.sheet-sophontAugmentBox
 	grid-template-rows: 20px repeat(9,25px) 1fr;
 	justify-items: start;
 	align-items: start;
-	margin: 4px;
 	justify-self: end;
+}
+
+.sheet-compositeSophontConditionWidget
+{
+	grid-column-start: 6;
+	grid-column-end: 7;
+	grid-row-start: 2;
+	grid-row-end: 14;
+	width: 150px;
+	height: 250px;
+	display: grid;
+	grid-column-gap: 2px;
+	grid-template-columns: 18px auto 25px;
+	grid-template-rows: 20px repeat(9,25px) 1fr;
+	justify-items: start;
+	align-items: start;
+	justify-self: end;
+}
+
+.sheet-additionalCompositeSophontConditionWidget
+{
+	grid-row-start: 2;
+	grid-row-end: 14;
+	width: 25px;
+	height: 250px;
+	display: grid;
+	grid-column-gap: 2px;
+	grid-template-columns: 25px;
+	grid-template-rows: 20px repeat(9,25px) 1fr;
+	justify-items: start;
+	align-items: start;
+	justify-self: end;
+}
+
+.sheet-additionalCompositeSophontCondition2
+{
+	grid-column-start: 7;
+	grid-column-end: 8;
+}
+
+.sheet-additionalCompositeSophontCondition3
+{
+	grid-column-start: 8;
+	grid-column-end: 9;
+}
+
+.sheet-additionalCompositeSophontCondition4
+{
+	grid-column-start: 9;
+	grid-column-end: 10;
+}
+
+.sheet-additionalCompositeSophontCondition5
+{
+	grid-column-start: 10;
+	grid-column-end: 11;
 }
 
 .sheet-sophontConditionTitle
@@ -5227,18 +5284,27 @@ textarea.sheet-sophontAugmentBox
 	font-variant: small-caps;
 	font-weight: 500;
 	flex-flow: nowrap;
-	font-size: 15px;
+	font-size: 14px;
 	grid-column-start: 1;
-	grid-column-end: 4;
+	grid-column-end: 3;
 	grid-row-start: 1;
 	grid-row-end: 2;
+}
+
+.sheet-sophontConditionNumber
+{
+	text-align: center;
+	font-weight: 500;
+	flex-flow: nowrap;
+	font-size: 13px;
+	height: 15px;
 }
 
 .sheet-sophontConditionCheckbox
 {
 	grid-column-start: 1;
 	grid-column-end: 2;
-	justify-self:baseline;
+	justify-self: baseline;
 }
 
 .sheet-sophontConditionText
@@ -5252,6 +5318,13 @@ textarea.sheet-sophontAugmentBox
 {
 	grid-column-start: 3;
 	grid-column-end: 4;
+	justify-self: baseline;
+}
+
+.sheet-additionalSophontColumn
+{
+	grid-column-start: 1;
+	grid-column-end: 2;
 	justify-self: baseline;
 }
 
