refactor event handlers

--- a/Shadowrun5thEdition/Shadowrun5thEdition.pug
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.pug
@@ -572,10 +572,12 @@ script(type="text/worker")
 
 	include src/js/versioning.js
 
+	//Old functions working to become obsolete
 	include src/js/helpers.js
 
 	include src/js/eventhandlers.js
 
+	//Old functions working to become obsolete
 	include src/js/scripts.js
 
 	include src/js/importer.js
