--- a/Shadowrun5thEdition/Shadowrun5thEdition.pug
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.pug
@@ -568,11 +568,15 @@ include src/html/hidden.html
 //- SCRIPTS
 script(type="text/worker")
 
+	include src/js/attributes.js
+
+	include src/js/processingFunctions.js
+
 	include src/js/newScripts.js
 
-	include src/js/versioning.js
-
 	include src/js/eventhandlers.js
+
+	include src/js/versioning.js
 
 	//Old functions working to become obsolete
 	include src/js/scripts.js
