Swarm Setup & Art
Added Swarm Log image
Added Damage image
Set up Swarm code

--- a/Free Spacer/FreeSpacer.css
+++ b/Free Spacer/FreeSpacer.css
@@ -34,7 +34,8 @@ input[type="radio"]
 input.sheet-crewmemberSelector:checked ~ div.sheet-crewmemberSheet,
 input.sheet-shipSelector:checked ~ div.sheet-shipSheet,
 input.sheet-sophontSelector:checked ~ div.sheet-sophontSheet,
-input.sheet-compositeSophontSelector:checked ~ div.sheet-compositeSophontSheet
+input.sheet-compositeSophontSelector:checked ~ div.sheet-compositeSophontSheet,
+input.sheet-swarmSelector:checked ~ div.sheet-swarmSheet
 {
 	display: block;
 }
@@ -359,6 +360,24 @@ textarea
 	padding: 6px;
 	grid-column-gap: 4px;
 }
+
+.sheet-swarmSheetGrid
+{
+	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/NPC/Free%20Spacer/images/swarmLog.png);
+	background-size: 900px 290px;
+	background-repeat: no-repeat;
+	width: 900px;
+	height: 285px;
+	display: grid;
+	grid-row-gap: 0px;
+	grid-template-columns: 75px 75px 1fr 150px 25px 25px 25px 25px 25px 25px 25px 25px 25px 5px;
+	grid-template-rows: 24px repeat(14,18px) 1fr;
+	justify-items: start;
+	align-items: start;
+	padding: 6px;
+	grid-column-gap: 4px;
+}
+
 
 
 /* ******************************* */
