Updated Swarm Conditions

--- a/Free Spacer/FreeSpacer.css
+++ b/Free Spacer/FreeSpacer.css
@@ -364,13 +364,13 @@ textarea
 .sheet-swarmSheetGrid
 {
 	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/NPC/Free%20Spacer/images/swarmLog.png);
-	background-size: 900px 290px;
+	background-size: 900px 374.4px;
 	background-repeat: no-repeat;
 	width: 900px;
-	height: 285px;
+	height: 374px;
 	display: grid;
 	grid-row-gap: 0px;
-	grid-template-columns: 75px 75px 1fr 150px 25px 25px 25px 25px 25px 25px 25px 25px 25px 5px;
+	grid-template-columns: 60px 70px 1fr 150px 25px 24px 25px 24px 25px 25px 25px 24px 24px 5px;
 	grid-template-rows: 24px repeat(14,18px) 1fr;
 	justify-items: start;
 	align-items: start;
@@ -5129,6 +5129,14 @@ textarea.sheet-sophontTagBox
 	width: 95%;
 }
 
+textarea.sheet-swarmTagBox
+{
+	margin-top: 3px;
+	height: 120px;
+	width: 95%;
+}
+
+
 textarea.sheet-sophontAugmentBox
 {
 	margin-top: 3px;
@@ -5217,10 +5225,53 @@ textarea.sheet-sophontAugmentBox
 	grid-row-end: 15;
 }
 
+.sheet-swarmTagList
+{
+	grid-row-start: 8;
+	grid-row-end: 15;
+}
+
+
 .sheet-sophontAugmentList
 {
 	grid-row-start: 10;
 	grid-row-end: 15;
+}
+
+span.sheet-threatDamageBoxBG
+{
+	grid-column-start: 1;
+	grid-column-end: 3;
+	grid-row-start: 10;
+	grid-row-end: 13;
+	align-self: center;
+	justify-self: start;
+	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/NPC/Free%20Spacer/images/damage.png);
+	background-size: 44px 44.5px;
+	background-repeat: no-repeat;
+	width: 44px;
+	height: 44.5px;
+	z-index: 2;
+	margin-left: 38px;
+	margin-top: -10px;
+}
+
+input.sheet-threatDamageBox
+{
+	grid-column-start: 1;
+	grid-column-end: 3;
+	grid-row-start: 10;
+	grid-row-end: 13;
+	align-self: center;
+	justify-self: center;
+	font-size: 16px;
+	width: 2.5em;
+	height: 2em;
+	z-index: 3;
+
+	background: transparent;
+	border: none;
+	text-align: center;
 }
 
 /* Sophont Conditions*/
@@ -5258,6 +5309,23 @@ textarea.sheet-sophontAugmentBox
 	justify-self: end;
 }
 
+.sheet-swarmConditionWidget
+{
+	grid-column-start: 4;
+	grid-column-end: 5;
+	grid-row-start: 2;
+	grid-row-end: 14;
+	width: 150px;
+	height: 350px;
+	display: grid;
+	grid-column-gap: 2px;
+	grid-template-columns: 25px auto 25px;
+	grid-template-rows: 20px repeat(11,25px) 1fr;
+	justify-items: start;
+	align-items: start;
+	justify-self: end;
+}
+
 .sheet-additionalCompositeSophontConditionWidget
 {
 	grid-row-start: 2;
@@ -5271,6 +5339,34 @@ textarea.sheet-sophontAugmentBox
 	justify-items: start;
 	align-items: start;
 	justify-self: end;
+}
+
+.sheet-additionalSwarmConditionWidget
+{
+	grid-row-start: 2;
+	grid-row-end: 14;
+	width: 25px;
+	height: 250px;
+	display: grid;
+	grid-column-gap: 2px;
+	grid-template-columns: 25px;
+	grid-template-rows: 20px repeat(11,25px) 1fr;
+	justify-items: start;
+	align-items: start;
+	justify-self: end;
+}
+
+.sheet-additionalSwarmCondition0
+{
+	grid-column-start: 5;
+	grid-column-end: 6;
+}
+
+
+.sheet-additionalSwarmCondition1
+{
+	grid-column-start: 6;
+	grid-column-end: 7;
 }
 
 .sheet-additionalCompositeSophontCondition2
@@ -5297,6 +5393,36 @@ textarea.sheet-sophontAugmentBox
 	grid-column-end: 11;
 }
 
+.sheet-additionalSwarmCondition6
+{
+	grid-column-start: 11;
+	grid-column-end: 12;
+}
+
+.sheet-additionalSwarmCondition7
+{
+	grid-column-start: 12;
+	grid-column-end: 13;
+}
+
+.sheet-additionalSwarmCondition8
+{
+	grid-column-start: 13;
+	grid-column-end: 14;
+}
+
+.sheet-additionalSwarmCondition9
+{
+	grid-column-start: 14;
+	grid-column-end: 15;
+}
+
+.sheet-additionalSwarmCondition10
+{
+	grid-column-start: 14;
+	grid-column-end: 15;
+}
+
 .sheet-sophontConditionTitle
 {
 	text-align: start;
@@ -5317,6 +5443,20 @@ textarea.sheet-sophontAugmentBox
 	flex-flow: nowrap;
 	font-size: 13px;
 	height: 15px;
+	width: 95%;
+	align-self: center;
+}
+
+input[type=number].sheet-sophontConditionNumber
+{
+	width: 1.5em;
+	height:1.5em;
+
+}
+
+input[type=number].sheet-sophontConditionNumber::-webkit-inner-spin-button
+{
+	-webkit-appearance: none;
 }
 
 .sheet-sophontConditionCheckbox
@@ -5330,21 +5470,21 @@ textarea.sheet-sophontAugmentBox
 {
 	grid-column-start: 2;
 	grid-column-end: 3;
-	justify-self: baseline;
+	align-self: center;
 }
 
 .sheet-sophontConditionArmour
 {
 	grid-column-start: 3;
 	grid-column-end: 4;
-	justify-self: baseline;
+	align-self: center;
 }
 
 .sheet-additionalSophontColumn
 {
 	grid-column-start: 1;
 	grid-column-end: 2;
-	justify-self: baseline;
+	align-self: center;
 }
 
 .sheet-sophontCondition1
@@ -5399,4 +5539,16 @@ textarea.sheet-sophontAugmentBox
 {
 	grid-row-start: 10;
 	grid-row-end: 11;
+}
+
+.sheet-sophontCondition10
+{
+	grid-row-start: 11;
+	grid-row-end: 12;
+}
+
+.sheet-sophontCondition11
+{
+	grid-row-start: 12;
+	grid-row-end: 13;
 }
