Set up Creature Log
Set up code for creature log
Added images for creature log

--- a/Free Spacer/FreeSpacer.css
+++ b/Free Spacer/FreeSpacer.css
@@ -35,7 +35,8 @@ input.sheet-crewmemberSelector:checked ~ div.sheet-crewmemberSheet,
 input.sheet-shipSelector:checked ~ div.sheet-shipSheet,
 input.sheet-sophontSelector:checked ~ div.sheet-sophontSheet,
 input.sheet-compositeSophontSelector:checked ~ div.sheet-compositeSophontSheet,
-input.sheet-swarmSelector:checked ~ div.sheet-swarmSheet
+input.sheet-swarmSelector:checked ~ div.sheet-swarmSheet,
+input.sheet-creatureSelector:checked ~ div.sheet-creatureSheet
 {
 	display: block;
 }
@@ -364,10 +365,10 @@ textarea
 .sheet-swarmSheetGrid
 {
 	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/NPC/Free%20Spacer/images/swarmLog.png);
-	background-size: 900px 374.4px;
+	background-size: 900px 340px;
 	background-repeat: no-repeat;
 	width: 900px;
-	height: 374px;
+	height: 335px;
 	display: grid;
 	grid-row-gap: 0px;
 	grid-template-columns: 60px 70px 1fr 150px 25px 24px 25px 24px 25px 25px 25px 24px 24px 5px;
@@ -378,7 +379,22 @@ textarea
 	grid-column-gap: 4px;
 }
 
-
+.sheet-creatureSheetGrid
+{
+	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/NPC/Free%20Spacer/images/creatureLog.png);
+	background-size: 900px 279px;
+	background-repeat: no-repeat;
+	width: 900px;
+	height: 275px;
+	display: grid;
+	grid-row-gap: 0px;
+	grid-template-columns: 60px 78px 1fr 80px 1fr 150px 25px 25px 25px 25px 5px;
+	grid-template-rows: 24px repeat(14,18px) 1fr;
+	justify-items: start;
+	align-items: start;
+	padding: 6px;
+	grid-column-gap: 4px;
+}
 
 /* ******************************* */
 /*			Aspects		           */
@@ -5132,7 +5148,7 @@ textarea.sheet-sophontTagBox
 textarea.sheet-swarmTagBox
 {
 	margin-top: 3px;
-	height: 120px;
+	height: 170px;
 	width: 95%;
 }
 
@@ -5316,11 +5332,28 @@ input.sheet-threatDamageBox
 	grid-row-start: 2;
 	grid-row-end: 14;
 	width: 150px;
-	height: 350px;
+	height: 300px;
 	display: grid;
 	grid-column-gap: 2px;
 	grid-template-columns: 25px auto 25px;
 	grid-template-rows: 20px repeat(11,25px) 1fr;
+	justify-items: start;
+	align-items: start;
+	justify-self: end;
+}
+
+.sheet-creatureConditionWidget
+{
+	grid-column-start: 6;
+	grid-column-end: 7;
+	grid-row-start: 2;
+	grid-row-end: 14;
+	width: 150px;
+	height: 275px;
+	display: grid;
+	grid-column-gap: 2px;
+	grid-template-columns: 18px auto 25px;
+	grid-template-rows: 20px repeat(10,25px) 1fr;
 	justify-items: start;
 	align-items: start;
 	justify-self: end;
