--- a/Free Spacer/FreeSpacer.css
+++ b/Free Spacer/FreeSpacer.css
@@ -186,6 +186,7 @@ select, textarea, input[type="text"], input[type="number"]
 	width: 100%;
 	line-height: 100%;
 	font-variant: normal;
+	background: transparent;
 }
 
 input[type="number"]
@@ -382,10 +383,10 @@ textarea
 .sheet-creatureSheetGrid
 {
 	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/NPC/Free%20Spacer/images/creatureLog.png);
-	background-size: 900px 279px;
+	background-size: 900px 285px;
 	background-repeat: no-repeat;
 	width: 900px;
-	height: 275px;
+	height: 280px;
 	display: grid;
 	grid-row-gap: 0px;
 	grid-template-columns: 60px 78px 1fr 80px 1fr 150px 25px 25px 25px 25px 5px;
@@ -5152,6 +5153,12 @@ textarea.sheet-swarmTagBox
 	width: 95%;
 }
 
+textarea.sheet-creatureTagBox
+{
+	margin-top: 3px;
+	height: 80px;
+	width: 95%;
+}
 
 textarea.sheet-sophontAugmentBox
 {
@@ -5258,7 +5265,7 @@ span.sheet-threatDamageBoxBG
 {
 	grid-column-start: 1;
 	grid-column-end: 3;
-	grid-row-start: 10;
+	grid-row-start: 11;
 	grid-row-end: 13;
 	align-self: center;
 	justify-self: start;
@@ -5272,11 +5279,29 @@ span.sheet-threatDamageBoxBG
 	margin-top: -10px;
 }
 
+span.sheet-creatureDamageBoxBG
+{
+	grid-column-start: 1;
+	grid-column-end: 3;
+	grid-row-start: 11;
+	grid-row-end: 13;
+	align-self: center;
+	justify-self: start;
+	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/NPC/Free%20Spacer/images/damage.png);
+	background-size: 44px 44.5px;
+	background-repeat: no-repeat;
+	width: 44px;
+	height: 44.5px;
+	z-index: 2;
+	margin-left: 42px;
+	margin-top: -10px;
+}
+
 input.sheet-threatDamageBox
 {
 	grid-column-start: 1;
 	grid-column-end: 3;
-	grid-row-start: 10;
+	grid-row-start: 11;
 	grid-row-end: 13;
 	align-self: center;
 	justify-self: center;
@@ -5284,8 +5309,6 @@ input.sheet-threatDamageBox
 	width: 2.5em;
 	height: 2em;
 	z-index: 3;
-
-	background: transparent;
 	border: none;
 	text-align: center;
 }
@@ -5346,7 +5369,7 @@ input.sheet-threatDamageBox
 {
 	grid-column-start: 6;
 	grid-column-end: 7;
-	grid-row-start: 2;
+	grid-row-start: 1;
 	grid-row-end: 14;
 	width: 150px;
 	height: 275px;
@@ -5384,6 +5407,21 @@ input.sheet-threatDamageBox
 	grid-column-gap: 2px;
 	grid-template-columns: 25px;
 	grid-template-rows: 20px repeat(11,25px) 1fr;
+	justify-items: start;
+	align-items: start;
+	justify-self: end;
+}
+
+.sheet-additionalCreatureConditionWidget
+{
+	grid-row-start: 1;
+	grid-row-end: 14;
+	width: 25px;
+	height: 275px;
+	display: grid;
+	grid-column-gap: 2px;
+	grid-template-columns: 25px;
+	grid-template-rows: 20px repeat(10,25px) 1fr;
 	justify-items: start;
 	align-items: start;
 	justify-self: end;
