Torg Eternity Update Announcement
I'm planning a major upgrade to sheet. Thread here: https://app.roll20.net/forum/post/8130061/torg-eternity-sheet-redesign-thread/?pagenum=1

This commit is to announce the change and give users a chance to give feedback in that thread. It makes no change to the sheet's functions.

--- a/Torg Eternity/Torg Eternity.css
+++ b/Torg Eternity/Torg Eternity.css
@@ -717,8 +717,45 @@ div.sheet-tab2
  
 .sheet-rolltemplate-power .inlinerollresult.importantroll {
 	color: #4A57ED;
-    border: none;.sheet-rolltemplate-power .sheet-arrow-right {
+    border: none;
+}
+.sheet-rolltemplate-power .sheet-arrow-right {
     border-top: 3px solid transparent;
     border-bottom: 3px solid transparent;
 	border-left: 180px solid rgb(126, 45, 64);
+}
+
+div.sheet-announcements {
+    display: none;
+    border: 1pt solid black;
+    background-color: grey;
+    color: white;
+    text-align: center;
+    border-radius: 15px;
+}
+input[type="text"].sheet-linkclass {
+    border:1pt solid black;
+    width: 500px;
+    margin-left: 50px;
+    text-align:center;
+}
+div.sheet-announcements h3.sheet-title {
+    border-bottom: 1pt solid black;
+    color: white;
+}
+input.sheet-announcements[value="1"] ~ div.sheet-announcements {
+    display: block;
+    width: 98%;
+    margin-left: 10px;
+}
+button[type=action].sheet-announcements {
+    width: 95%;
+    margin-left: 5px;
+}
+div.sheet-announcements .sheet-important {
+    color: red;
+    font-size: 1.2em;
+}
+p.sheet-center {
+    text-align: center;
 }
