Drone sheet Complete
Completed Drone Log

--- a/Free Spacer/FreeSpacer.css
+++ b/Free Spacer/FreeSpacer.css
@@ -36,7 +36,12 @@ input.sheet-shipSelector:checked ~ div.sheet-shipSheet,
 input.sheet-sophontSelector:checked ~ div.sheet-sophontSheet,
 input.sheet-compositeSophontSelector:checked ~ div.sheet-compositeSophontSheet,
 input.sheet-swarmSelector:checked ~ div.sheet-swarmSheet,
-input.sheet-creatureSelector:checked ~ div.sheet-creatureSheet
+input.sheet-creatureSelector:checked ~ div.sheet-creatureSheet,
+input.sheet-behemothSelector:checked ~ div.sheet-behemothSheet,
+input.sheet-droneSelector:checked ~ div.sheet-droneSheet,
+input.sheet-shuttleSelector:checked ~ div.sheet-shuttleSheet,
+input.sheet-smallCraftSelector:checked ~ div.sheet-smallCraftSheet,
+input.sheet-shipLogSelector:checked ~ div.sheet-shipLogSheet
 {
 	display: block;
 }
@@ -373,12 +378,30 @@ textarea
 	display: grid;
 	grid-row-gap: 0px;
 	grid-template-columns: 60px 70px 1fr 150px 25px 24px 25px 24px 25px 25px 25px 24px 24px 5px;
-	grid-template-rows: 24px repeat(14,18px) 1fr;
+	grid-template-rows: 24px repeat(18,18px) 1fr;
 	justify-items: start;
 	align-items: start;
 	padding: 6px;
 	grid-column-gap: 4px;
 }
+
+.sheet-droneSheetGrid
+{
+	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/NPC/Free%20Spacer/images/swarmLog.png);
+	background-size: 900px 340px;
+	background-repeat: no-repeat;
+	width: 900px;
+	height: 335px;
+	display: grid;
+	grid-row-gap: 0px;
+	grid-template-columns: 85px 70px 1fr 150px 25px 24px 25px 24px 25px 25px 25px 24px 24px 5px;
+	grid-template-rows: 24px repeat(18,18px) 1fr;
+	justify-items: start;
+	align-items: start;
+	padding: 6px;
+	grid-column-gap: 4px;
+}
+
 
 .sheet-creatureSheetGrid
 {
@@ -5160,6 +5183,13 @@ textarea.sheet-creatureTagBox
 	width: 95%;
 }
 
+textarea.sheet-droneTagBox
+{
+	margin-top: 3px;
+	height: 150px;
+	width: 95%;
+}
+
 textarea.sheet-sophontAugmentBox
 {
 	margin-top: 3px;
@@ -5242,6 +5272,13 @@ textarea.sheet-sophontAugmentBox
 	grid-row-end: 16;
 }
 
+.sheet-droneNotes
+{
+	grid-row-start: 17;
+	grid-row-end: 18;
+}
+
+
 .sheet-sophontTagList
 {
 	grid-row-start: 12;
@@ -5294,6 +5331,24 @@ span.sheet-creatureDamageBoxBG
 	height: 44.5px;
 	z-index: 2;
 	margin-left: 42px;
+	margin-top: -10px;
+}
+
+span.sheet-droneDamageBoxBG
+{
+	grid-column-start: 1;
+	grid-column-end: 3;
+	grid-row-start: 11;
+	grid-row-end: 13;
+	align-self: center;
+	justify-self: start;
+	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/NPC/Free%20Spacer/images/damage.png);
+	background-size: 44px 44.5px;
+	background-repeat: no-repeat;
+	width: 44px;
+	height: 44.5px;
+	z-index: 2;
+	margin-left: 50px;
 	margin-top: -10px;
 }
 
