Torg Eternity Sheet Update Announcement
In preparation for a major sheet update, this commit adds an announcement at the top of character sheets letting players know about it, and how to preview the changes.

No functional changes to the sheet are made in this commit.

--- a/Torg Eternity/Torg Eternity.css
+++ b/Torg Eternity/Torg Eternity.css
@@ -737,3 +737,34 @@ div.sheet-tab-content
     border-bottom: 3px solid transparent;
 	border-left: 180px solid rgb(126, 45, 64);
 }
+
+div.sheet-announcements {
+    display: none;
+    color: white;
+    background-color: grey;
+    border: 1pt solid black;
+    text-align: center;
+}
+
+input.sheet-announcements[value="1"] ~ div.sheet-announcements {
+    display: block;
+    /* margin-left: 10px; */
+}
+
+div.sheet-announcements h3.sheet-title {
+    border-bottom: 1pt solid black;
+    color: white;
+}
+input[type="text"].sheet-linkclass {
+    text-align:center;
+    border: 1pt solid black;
+    width: 500px;
+}
+button[type=action].sheet-announcements {
+    width: 95%;
+    margin-left: 5px;
+}
+div.sheet-announcements .sheet-important {
+    color: red;
+    font-size: 1.2em;
+}
