fix bugs in skills

--- a/Shadowrun5thEdition/Shadowrun5thEdition.css
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.css
@@ -108,6 +108,11 @@ input[name='attr_stats_toggle'] {
   opacity: 0;
   z-index: 2; }
 
+.sheet-eclipse {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap; }
+
 /* SWITCHES
 	============================= */
 /* The switch - the box around the slider */
@@ -1518,6 +1523,11 @@ div.sheet-htab {
   width: 100%; }
 
 /***** SKILLS *****/
+div.sheet-skill-box div.sheet-buttons {
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  overflow: hidden; }
+
 option.sheet-option-headers {
   opacity: 0.2; }
 
@@ -2367,10 +2377,10 @@ input[name='attr_flag_special'][value='magic'] ~ div.sheet-npc .sheet-grunt.shee
 input[name='attr_stats_toggle']:not([value='settings']) ~ div.sheet-attribute .sheet-settings.sheet-hide-magic,
 input[name='attr_stats_toggle']:not([value='settings']) ~ div.sheet-attribute .sheet-settings.sheet-hide-resonance,
 input[name='attr_stats_toggle']:not([value='settings']) ~ div.sheet-body .sheet-settings.sheet-hide-magic,
-input[name='attr_stats_toggle']:not([value='settings']) ~ div.sheet-body .sheet-settings.sheet-hide-resonance, input[name='attr_stats_toggle']:not([value='settings']) ~ div.sheet-body input[type='hidden'][value=''] + div.sheet-textrow, input[name='attr_stats_toggle']:not([value='settings']) ~ div.sheet-body input[type='hidden'][value=''] + div.sheet-rows.sheet-grunt, input[name='attr_display_specialization'][value=''] ~ button[name*='specialization'],
-input[name='attr_display_specialization'][value=' '] ~ button[name*='specialization'],
-input[name='attr_display_specialization'][value=''] ~ div.sheet-row-long div.sheet-buttons button[name*='specialization'],
-input[name='attr_display_specialization'][value=' '] ~ div.sheet-row-long div.sheet-buttons button[name*='specialization'], input[name='attr_weapon_range'][value='range'] ~ h2[data-i18n='reach'],
+input[name='attr_stats_toggle']:not([value='settings']) ~ div.sheet-body .sheet-settings.sheet-hide-resonance, input[name='attr_stats_toggle']:not([value='settings']) ~ div.sheet-body input[type='hidden'][value=''] + div.sheet-textrow, input[name='attr_stats_toggle']:not([value='settings']) ~ div.sheet-body input[type='hidden'][value=''] + div.sheet-rows.sheet-grunt, input[name='attr_specialization'][value=''] ~ button[name*='specialization'],
+input[name='attr_specialization'][value=' '] ~ button[name*='specialization'],
+input[name='attr_specialization'][value=''] ~ div.sheet-row-long div.sheet-buttons button[name*='specialization'],
+input[name='attr_specialization'][value=' '] ~ div.sheet-row-long div.sheet-buttons button[name*='specialization'], input[name='attr_weapon_range'][value='range'] ~ h2[data-i18n='reach'],
 input[name='attr_weapon_range'][value='range'] ~ label[data-i18n-title='reach'], input[name='attr_weapon_range'][value='melee'] ~ h2[data-i18n='modes'],
 input[name='attr_weapon_range'][value='melee'] ~ h2[data-i18n='recoil'],
 input[name='attr_weapon_range'][value='melee'] ~ h2[data-i18n='ammo'],
