--- a/Shadowrun5thEdition/src/scss/_global.scss
+++ b/Shadowrun5thEdition/src/scss/_global.scss
@@ -117,3 +117,9 @@
 		opacity: 0;
 		z-index: 2;
 	}
+
+  .sheet-eclipse {
+      overflow: hidden;
+      text-overflow: ellipsis; 
+      white-space: nowrap;  
+  }
