--- a/Shadowrun5thEdition/src/scss/_hide.scss
+++ b/Shadowrun5thEdition/src/scss/_hide.scss
@@ -168,10 +168,10 @@
 	}
 
 	//- HIDE SPECIALIZATION BUTTONS IF THERE IS NO SPECIALIZATION
-	input[name='attr_display_specialization'][value=''] ~ button[name*='specialization'],
-	input[name='attr_display_specialization'][value=' '] ~ button[name*='specialization'],
-	input[name='attr_display_specialization'][value=''] ~ div.sheet-row-long div.sheet-buttons button[name*='specialization'],
-	input[name='attr_display_specialization'][value=' '] ~ div.sheet-row-long div.sheet-buttons button[name*='specialization']  {
+	input[name='attr_specialization'][value=''] ~ button[name*='specialization'],
+	input[name='attr_specialization'][value=' '] ~ button[name*='specialization'],
+	input[name='attr_specialization'][value=''] ~ div.sheet-row-long div.sheet-buttons button[name*='specialization'],
+	input[name='attr_specialization'][value=' '] ~ div.sheet-row-long div.sheet-buttons button[name*='specialization']  {
 		@extend %display-none;
 	}
 
