--- a/Shadowrun5thEdition/src/scss/_pc.scss
+++ b/Shadowrun5thEdition/src/scss/_pc.scss
@@ -617,7 +617,14 @@
 	}
 
 	/***** SKILLS *****/
-
+  div.sheet-skill-box {
+    div.sheet-buttons {
+      display: grid;
+      grid-template-columns: 2fr 1fr;
+      overflow: hidden;
+    }
+  }
+  
 	option.sheet-option-headers {opacity: 0.2;}
 
 	option.sheet-option-groups {
