--- a/Shadowrun5thEdition/Shadowrun5thEdition.pug
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.pug
@@ -81,13 +81,15 @@ include src/pug/_variables.pug
 									input(name='attr_specialization' type='hidden' value='')
 									input(name='attr_display_limit' type='hidden' value=val[2])
 									input(name='attr_display_attribute' type='hidden' value=val[1])
-									input(name='attr_display_skill' type='hidden' value='')
 									input(name='attr_dicepool' type='hidden' value='0')
+
+									if key === 'active'
+										input(name='attr_display_skill' type='hidden' value='')
 
 									input.settings-flag(name='attr_flag' type='hidden' value='settings' title=`${skillsRepeatingSection}_flag}`)
 									.buttons
 										//- SKILL BUTTON
-										+skillButton(false)
+										+skillButton(false, key)
 										//- SPECILIZATION BUTTON
 										+skillButton(true)
 									span.text-align-center(name='attr_display_rating' title=`${skillsRepeatingSection}_display_rating}`)
