fix weapon overwrite

--- a/Shadowrun5thEdition/Shadowrun5thEdition.css
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.css
@@ -1525,7 +1525,7 @@ div.sheet-htab {
 /***** SKILLS *****/
 div.sheet-skill-box div.sheet-buttons {
   display: grid;
-  grid-template-columns: 2fr 1fr;
+  grid-template-columns: 1fr 2fr;
   overflow: hidden; }
 
 option.sheet-option-headers {
@@ -2347,8 +2347,8 @@ span.sheet-d6 {
 /************************************************************************/
 /* DISPLAY SETTINGS
 	============================= */
-.sheet-pc div.sheet-skill-box input[name='attr_display_specialization'][value=' '] ~ div.sheet-buttons button[name*='specialization'],
-.sheet-pc div.sheet-skill-box input[name='attr_display_specialization'][value=''] ~ div.sheet-buttons button[name*='specialization'], .sheet-pc div.sheet-magic input.sheet-magic-toggle[value='rituals'] ~ .sheet-headers h2:nth-of-type(1n+2), .sheet-collapsable .sheet-desc, .sheet-collapsable .sheet-desc-lifestyle, .sheet-matrix,
+.sheet-pc div.sheet-skill-box input[name='attr_specialization'][value=' '] ~ div.sheet-buttons button[name*='specialization'],
+.sheet-pc div.sheet-skill-box input[name='attr_specialization'][value=''] ~ div.sheet-buttons button[name*='specialization'], .sheet-pc div.sheet-magic input.sheet-magic-toggle[value='rituals'] ~ .sheet-headers h2:nth-of-type(1n+2), .sheet-collapsable .sheet-desc, .sheet-collapsable .sheet-desc-lifestyle, .sheet-matrix,
 .sheet-magic,
 .sheet-resonance,
 .sheet-optional,
