--- a/Shadowrun5thEdition/Shadowrun5thEdition.pug
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.pug
@@ -76,7 +76,7 @@ include src/pug/_variables.pug
 										select.limit-select(name='attr_limit' title='Skill limit')
 											+limitSelect('Physical')
 								fieldset(class=`repeating_${key}`)
-									- const skillsRepeatingSection = `@{repeating_${val[0]}`+'_${x}';
+									- const skillsRepeatingSection = `@{repeating_${key}`+'_${x}';
 
 									input(name='attr_display_rating' type='hidden')
 									input(name='attr_specialization' type='hidden' value='')
