--- a/Shadowrun5thEdition/Shadowrun5thEdition.scss
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.scss
@@ -539,8 +539,8 @@ $npcTypes: 'grunt', 'host', 'sprite', 'vehicle';
 
 			input[name='attr_rating_modifier'] { width: 3.5em; }
 
-			input[name='attr_display_specialization'][value=' '] ~ div.sheet-buttons button[name*='specialization'],
-			input[name='attr_display_specialization'][value=''] ~ div.sheet-buttons button[name*='specialization'] { @extend %display-none; }
+			input[name='attr_specialization'][value=' '] ~ div.sheet-buttons button[name*='specialization'],
+			input[name='attr_specialization'][value=''] ~ div.sheet-buttons button[name*='specialization'] { @extend %display-none; }
 
 			div.sheet-row-long {
 				grid-template-columns: $skillGrid;
