fix repeating titles

--- a/Shadowrun5thEdition/Shadowrun5thEdition.pug
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.pug
@@ -64,7 +64,7 @@ include src/pug/_variables.pug
 								h2(data-i18n=translationKey) #{val}
 					input.tab-switch(name='attr_skill_toggle' type='hidden' value='active')
 					each val, key in {'active': ['active', 'Agility', 'Physical'],'knowledge':['know', 'Logic', 'Mental'], 'language': ['lang', 'Charisma', 'Social']}
-						div(class='skills-'+val[0])
+						div(class=`skills-${val[0]}`)
 							.rows.repeating-container
 								if key === 'active'
 									.row-long
